# AiStockTrader

./: .coveragerc_domain  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REFACTOR_SUMMARY.md  BRANCH_PROTECTION_SETUP.md  CLAUDE.md  CODEOWNERS  CONCURRENCY_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT_FOUNDATIONS_ROADMAP.md  Dockerfile  FOUNDATION_VALIDATION_REPORT.md  GITHUB_BRANCH_PROTECTION.md  MYPY_FIXES_SUMMARY.md  MYPY_TYPE_ERROR_ANALYSIS.md  Makefile  PSYCOPG3_CONVERSION_SUMMARY.md  README.md  REQUEST_DTO_REFACTORING_SUMMARY.md  SECURITY_FIXES_IMPLEMENTATION_SUMMARY.md  Stock_Monitoring.code-workspace  TEST_STATUS.md  coverage.json  debug_auth.py  debug_context.py  debug_detailed.py  debug_extended.py  debug_rate_limit.py  docker-compose.yml  fix_all_portfolio_refs.py  fix_portfolio_method_references.py  fix_portfolio_tests.py  mypy_error_analysis.md  paper_trading_alpaca.py  paper_trading_minimal.py  paper_trading_quick_test.py  pyproject.toml  pytest.ini  quick_test_trades.json  (+10 more)
ai_trader/: .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE-OPERATIONS.md  CLAUDE-SETUP.md  CLAUDE-TECHNICAL.md  CLAUDE.md  CLAUDE_UPDATE_SUMMARY_2025-01-10.md  COMPONENT_MAPPING.md  CONTRIBUTING.md  CRITICAL_PATH_TEST.md  Dockerfile  ISSUES_feature_pipeline.md  ISSUES_feature_pipeline_clean.md  ISSUES_interfaces.md  ISSUES_interfaces.py  ISSUES_models.md  ISSUES_monitoring.md  ISSUES_trading_engine.md  ISSUES_utils.md  ISSUE_REGISTRY.md  LICENSE  MANIFEST.in  PHASE_COVERAGE_MATRIX.md  PROJECT_AUDIT.md  PROJECT_STRUCTURE.md  README.md  ai_trader.py  ai_trader_refactored.py  code_analysis_results.json  code_inventory.sh  code_inventory_v2.sh  config_performance_benchmark.py  docker-compose.yml  meta-pickup.md  pickup.md  pyproject.toml  pytest.ini  review_progress.json  setup.cfg  (+6 more)
ai_trader/.claude/: QUICK_COMMANDS.md  claude.config.json
ai_trader/docs/: ML_TRADING_INTEGRATION.md  ML_TRADING_QUICKSTART.md  PAPER_TRADING_GUIDE.md  SCANNER_INTEGRATION.md  SCANNER_OPERATIONS.md  SCANNER_WORKFLOW.md  SESSION_STATUS.md  SYSTEM_ENTRY_POINTS.md  TEST_COVERAGE_MATRIX.md  automatic_archival.md  data_loading_analysis.md  data_pipeline_integration.md  execution_engine_integration.md  full_system_architecture.html  hot_cold_storage.md  news_data_routing.md  reset_large_table_guide.md
ai_trader/examples/: README.md  data_pipeline_integration_example.py  execution_engine_example.py  ml_trading_example.py  risk_management_demo.py  run_ml_trading.sh
ai_trader/migrations/: update_news_data_schema.sql
ai_trader/scripts/: analyze_archive_duplicates.py  analyze_database_schema.py  analyze_layer1_limits.py  backfill_layer1.sh  calculate_pairs_stats.py  check_aa_liquidity.py  check_market_data.py  code_analyzer.py  debug_corporate_actions_freeze.py  debug_layer1_aa.py  deploy_database_optimizations.py  deploy_ml_model.py  discover_stat_arb_pairs.py  generate_tsla_validation_report.py  health_check.py  init_database.py  load_datalake_to_db.py  optimize_database_indexes.sql  optimize_database_indexes_fixed.sql  run_health_check.sh  run_layer1_backfill.py  run_migration.py  run_scanner_pipeline.py  run_tsla_full_test.py  test_backfill_fixes.py  test_corporate_actions_fix.py  test_ml_trading.py  test_polygon_reference.py  test_tsla_scanner_pipeline.py  trace_layer1_issue.py  validate_db_empty.py  validate_tsla_backfill.py  verify_conflict_behavior.py
ai_trader/sql/: create_corporate_actions_table.sql  create_news_data_table.sql  test_queries.sql  verify_corporate_actions.sql
ai_trader/src/: __init__.py
ai_trader/test_helpers/: test_position_manager.py
ai_trader/tests/: COVERAGE_INSTRUCTIONS.md  EVENTS_TESTING_GUIDE.md  README.md  conftest.py  coverage_report.py  pytest.ini  quick_test.py  run_all_tests.py  run_data_pipeline_tests.py  run_events_tests.py  run_integration_tests.py  setup_and_run.sh  setup_test_environment.py  test_archive_integration.py  test_backfill_event_flow.py  test_config_validation.py  test_correlation_matrix.py  test_integration_simple.py  test_phase1_utilities.py  test_setup.py  validate_system.py
ai_trader/tools/: README.md  debug_config.py  lint.sh  run_tests.sh  setup.sh  standardize_imports.py  system_cleanup.py  validate_config.py
ai_trader_old/: .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE-OPERATIONS.md  CLAUDE-SETUP.md  CLAUDE-TECHNICAL.md  CLAUDE.md  CLAUDE_UPDATE_SUMMARY_2025-01-10.md  COMPONENT_MAPPING.md  CONTRIBUTING.md  CRITICAL_PATH_TEST.md  DEVELOPMENT_FOUNDATIONS_ROADMAP.md  Dockerfile  ISSUES_interfaces.md  LICENSE  MANIFEST.in  PHASE_COVERAGE_MATRIX.md  PROJECT_STRUCTURE.md  README.md  ai_trader.py  ai_trader_refactored.py  code_analysis_results.json  code_inventory.sh  code_inventory_v2.sh  config_performance_benchmark.py  docker-compose.yml  enable_debug.sh  main.py  meta-pickup.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  start_paper_trading.py  start_paper_trading.sh  test_results.json  test_trading_flow.py  tox.ini
ai_trader_old/docs/: ML_TRADING_INTEGRATION.md  ML_TRADING_QUICKSTART.md  PAPER_TRADING_GUIDE.md  SCANNER_INTEGRATION.md  SCANNER_OPERATIONS.md  SCANNER_WORKFLOW.md  SESSION_STATUS.md  SYSTEM_ENTRY_POINTS.md  TEST_COVERAGE_MATRIX.md  automatic_archival.md  data_loading_analysis.md  data_pipeline_integration.md  execution_engine_integration.md  full_system_architecture.html  hot_cold_storage.md  news_data_routing.md  reset_large_table_guide.md
ai_trader_old/examples/: README.md  data_pipeline_integration_example.py  execution_engine_example.py  ml_trading_example.py  risk_management_demo.py  run_ml_trading.sh
ai_trader_old/migrations/: update_news_data_schema.sql
ai_trader_old/scripts/: analyze_archive_duplicates.py  analyze_database_schema.py  analyze_layer1_limits.py  backfill_layer1.sh  calculate_pairs_stats.py  check_aa_liquidity.py  check_market_data.py  code_analyzer.py  debug_corporate_actions_freeze.py  debug_layer1_aa.py  deploy_database_optimizations.py  deploy_ml_model.py  discover_stat_arb_pairs.py  generate_tsla_validation_report.py  health_check.py  init_database.py  (+17 more)
(+2782 files in other folders)
