[metadata]
name = ai-trader
description = Enterprise-Grade Algorithmic Trading Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/ai-trader
author = AI Trader Development Team
license = Private
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    Topic :: Office/Business :: Financial :: Investment
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
include = main*
exclude = tests*

[options.entry_points]
console_scripts =
    ai-trader = main.cli:main
    ai-trader-trade = main.app.run_trading:main
    ai-trader-train = main.app.run_training:main
    ai-trader-backfill = main.app.run_backfill:main
    ai-trader-validate = main.app.run_validation:main

[options.extras_require]
dev = 
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    black>=23.7.0
    isort>=5.12.0
    mypy>=1.5.0
    pre-commit>=3.3.0

# Flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = 
    # E203: whitespace before ':' (conflicts with black)
    E203,
    # W503: line break before binary operator (conflicts with black)
    W503,
    # E501: line too long (handled by black)
    E501
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    .tox,
    venv,
    env,
    build,
    dist,
    data_lake,
    models,
    logs
per-file-ignores =
    # Ignore import issues in __init__.py files
    __init__.py:F401,F403
    # Ignore complexity in configuration files
    */config/*.py:C901
    # Ignore unused imports in test files
    test_*.py:F401

# Pylint configuration
[pylint]
# Disable specific warnings that conflict with our architecture
disable = 
    # Too many arguments (common in trading functions)
    too-many-arguments,
    # Too many instance attributes (common in trading classes)
    too-many-instance-attributes,
    # Too many public methods (common in manager classes)
    too-many-public-methods,
    # Import outside toplevel (used for lazy imports)
    import-outside-toplevel,
    # Missing module docstring (not needed for all modules)
    missing-module-docstring

# MyPy configuration (supplemental to pyproject.toml)
[mypy-alpaca.*]
ignore_missing_imports = True

[mypy-polygon.*]
ignore_missing_imports = True

[mypy-yfinance.*]
ignore_missing_imports = True

[mypy-dash.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

# Bandit security linting (if used)
[bandit]
exclude_dirs = tests,venv,env,data_lake,models
skips = B101,B601